--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </div>
 
         <ul class="social">
-            <li><a href="#"><img src="https://i.ibb.co/x7P24fL/facebook.png"></a></li>
-            <li><a href="#"><img src="https://i.ibb.co/ySwtH4B/instagram.png"></a></li>
+            <li><a href="https://www.facebook.com/La-Patisserie-104296034701643" target = "_blank"><img src="https://i.ibb.co/x7P24fL/facebook.png"></a></li>
+            <li><a href="https://www.instagram.com/la_patisserie5/" target = "_blank"><img src="https://i.ibb.co/ySwtH4B/instagram.png"></a></li>
         </ul>
     </section>
 </body>
