--- a/login.html
+++ b/login.html
@@ -38,8 +38,8 @@
         </form>
         <div class="bottom">
             <ul class="social">
-                <li><a href="#"><img src="https://i.ibb.co/x7P24fL/facebook.png"></a></li>
-                <li><a href="#"><img src="https://i.ibb.co/ySwtH4B/instagram.png"></a></li>
+                <li><a href="https://www.facebook.com/La-Patisserie-104296034701643" target = "_blank"><img src="https://i.ibb.co/x7P24fL/facebook.png"></a></li>
+                <li><a href="https://www.instagram.com/la_patisserie5/" target = "_blank"><img src="https://i.ibb.co/ySwtH4B/instagram.png"></a></li>
             </ul>
         </div>
         
